@@ -1,3 +1,8 @@
+2010-10-16  Pierre Muller  <muller@ics.u-strasbg.fr>
+
+	* p-typeprint.c (pascal_type_print_method_args): Fix problem in
+	display of type of method arguments.
+
 2010-10-15  Tom Tromey  <tromey@redhat.com>
 
 	PR python/11948:
